[package]
name = "firefly-hal"
version = "0.3.2"
rust-version = "1.89.0"
edition = "2024"
description = "Hardware Abstraction Layer for Firefly Zero device and emulators"
license = "MIT"

[dependencies]
firefly-types = { version = "0.7.1" }
postcard = "1.1.3"

# hosted
[target.'cfg(not(any(target_os = "none", target_os = "android")))'.dependencies]
# access system battery info
battery = "0.7.8"
# read gamepad input
gilrs = "0.11.1"

[target.'cfg(not(target_os = "none"))'.dependencies]
embedded-io = { version = "0.6.1", features = ["std"] }

# play audio through speakers
rodio = { version = "0.21.1", features = ["playback"] }
# record audio as wav
hound = "3.5.1"
rand = "0.9.2"

# web
[target.'cfg(target_family = "wasm")'.dependencies]
embedded-io = { version = "0.6.1", features = ["std"] }
gilrs = "0.11.0"
rust-embed = { version = "8.0.0", features = ["debug-embed"] }
vfs = { version = "0.12.0", features = ["embedded-fs"] }
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.69", features = ["Window", "Performance"] }

# android
[target.'cfg(target_os = "android")'.dependencies]
macroquad = "0.4"

# embedded
[target.'cfg(target_os = "none")'.dependencies]
# work with the SD card
embedded-sdmmc = { version = "0.9.0", default-features = false }
embedded-hal-bus = { version = "0.3.0", default-features = false }
embedded-io = { version = "0.6.1", default-features = false }
# allocator, for allocating slices in PSRAM
esp-alloc = { version = "0.9.0", features = ["esp32s3", "nightly"] }
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }
embedded-hal = { version = "1.0.0" }
# frames for communicting through serial port
cobs = { version = "0.5.0", default-features = false }
# fast f32 approximation math for calibrating touchpad
micromath = { version = "2.1.0", default-features = false }
